crates/parser/src/snapshots/parser__lexer__tests__assignment.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: LocalKw,
                range: 0..5,
            },
            "local",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 5..6,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Ident,
                range: 6..11,
            },
            "hello",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 11..12,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Eq,
                range: 12..13,
            },
            "=",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 13..14,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Number,
                range: 14..15,
            },
            "5",
        ),
    ),
]
