crates/parser/src/snapshots/parser__lexer__tests__concat.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: DoubleDot,
                range: 0..2,
            },
            "..",
        ),
    ),
]
