crates/parser/src/snapshots/parser__lexer__tests__delimiters.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 0..1,
            },
            "\n",
        ),
    ),
    Ok(
        (
            Token {
                kind: LBrace,
                range: 1..2,
            },
            "{",
        ),
    ),
    Ok(
        (
            Token {
                kind: Ident,
                range: 2..7,
            },
            "hello",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 7..8,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Eq,
                range: 8..9,
            },
            "=",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 9..10,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Str,
                range: 10..19,
            },
            "\"another\"",
        ),
    ),
    Ok(
        (
            Token {
                kind: RBrace,
                range: 19..20,
            },
            "}",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 20..21,
            },
            "\n",
        ),
    ),
    Ok(
        (
            Token {
                kind: Ident,
                range: 21..25,
            },
            "asdf",
        ),
    ),
    Ok(
        (
            Token {
                kind: LParen,
                range: 25..26,
            },
            "(",
        ),
    ),
    Ok(
        (
            Token {
                kind: RParen,
                range: 26..27,
            },
            ")",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 27..28,
            },
            "\n",
        ),
    ),
    Ok(
        (
            Token {
                kind: LBracket,
                range: 28..29,
            },
            "[",
        ),
    ),
    Ok(
        (
            Token {
                kind: RBracket,
                range: 29..30,
            },
            "]",
        ),
    ),
    Ok(
        (
            Token {
                kind: LBracket,
                range: 30..31,
            },
            "[",
        ),
    ),
    Ok(
        (
            Token {
                kind: RBracket,
                range: 31..32,
            },
            "]",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 32..45,
            },
            "\n            ",
        ),
    ),
]
