crates/parser/src/snapshots/parser__lexer__tests__double_colon.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: DoubleColon,
                range: 0..2,
            },
            "::",
        ),
    ),
    Ok(
        (
            Token {
                kind: Ident,
                range: 2..10,
            },
            "continue",
        ),
    ),
    Ok(
        (
            Token {
                kind: DoubleColon,
                range: 10..12,
            },
            "::",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 12..13,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: DoubleColon,
                range: 13..15,
            },
            "::",
        ),
    ),
    Ok(
        (
            Token {
                kind: Ident,
                range: 15..18,
            },
            "has",
        ),
    ),
    Ok(
        (
            Token {
                kind: DoubleColon,
                range: 18..20,
            },
            "::",
        ),
    ),
]
