crates/parser/src/snapshots/parser__lexer__tests__first_token_test.snap
---
source: crates/parser/src/lexer.rs
expression: "first_token(\"hello\")"

---
Ok(
    (
        Ident,
        5,
    ),
)
