crates/parser/src/snapshots/parser__lexer__tests__hex_numbers.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: Number,
                range: 0..10,
            },
            "0xffffffff",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 10..11,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Ident,
                range: 11..16,
            },
            "hello",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                range: 16..17,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Number,
                range: 17..27,
            },
            "0x12345678",
        ),
    ),
]
