crates/parser/src/snapshots/parser__lexer__tests__idents.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Ok(
        (
            Token {
                kind: Ident,
                len: 5,
            },
            "hello",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 4,
            },
            "\n   ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Ident,
                len: 5,
            },
            "world",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 1,
            },
            " ",
        ),
    ),
    Ok(
        (
            Token {
                kind: Ident,
                len: 3,
            },
            "yes",
        ),
    ),
    Ok(
        (
            Token {
                kind: Whitespace,
                len: 15,
            },
            "\n              ",
        ),
    ),
]
