crates/parser/src/snapshots/parser__lexer__tests__multi_string_fail-2.snap
---
source: crates/parser/src/lexer.rs
expression: tokens

---
[
    Err(
        (
            LexError {
                msg: LexErrorMsg(
                    "Invalid bracket notation",
                ),
                range: 0..8,
            },
            "[=[adf]]",
        ),
    ),
]
